<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="@dimen/bottom_bar_height"
    android:layout_alignParentBottom="true"
    android:descendantFocusability="afterDescendants"
    android:id="@+id/bottom_bar2">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:orientation="vertical"
        android:id="@+id/icon_homepage">

        <TextView
            android:id="@+id/tv_homepage"
            android:layout_width="@dimen/bottom_bar_width"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:background="@drawable/homepage_icon_selected"
            android:gravity="center_horizontal"
            android:text="@string/homepage"
            android:textSize="@dimen/bottom_text_size"
            android:textColor="@color/colorIconSelected"
            android:paddingTop="@dimen/bottom_text_padding_top"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:orientation="vertical"
        android:id="@+id/icon_college">
        <TextView
            android:id="@+id/tv_college"
            android:layout_width="@dimen/bottom_bar_width"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/college_icon_default"
            android:gravity="center_horizontal"
            android:text="@string/college"
            android:textSize="@dimen/bottom_text_size"
            android:textColor="@color/colorIconDefault"
            android:paddingTop="@dimen/bottom_text_padding_top"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:orientation="vertical"
        android:id="@+id/icon_shopping_car">
        <TextView
            android:id="@+id/tv_shopping_car"
            android:layout_width="@dimen/bottom_bar_width"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/shopping_car_default"
            android:gravity="center_horizontal"
            android:text="@string/shopping_car"
            android:textSize="@dimen/bottom_text_size"
            android:textColor="@color/colorIconDefault"
            android:paddingTop="@dimen/bottom_text_padding_top"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:clickable="true"
        android:id="@+id/icon_my">
        <TextView
            android:id="@+id/tv_my"
            android:layout_width="@dimen/bottom_bar_width"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/my_icon_default"
            android:gravity="center_horizontal"
            android:text="@string/my"
            android:textSize="@dimen/bottom_text_size"
            android:textColor="@color/colorIconDefault"
            android:paddingTop="@dimen/bottom_text_padding_top"/>
    </LinearLayout>
</LinearLayout>