<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:layout_alignParentBottom="true"
    android:descendantFocusability="afterDescendants">
    <LinearLayout
        android:id="@+id/bottom_btn_homepage"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/icon_homepage"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/homepage_icon_selected"
            />
        <TextView
            android:id="@+id/tv_homepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/homepage"
            android:textSize="12sp"
            android:textColor="@color/colorIconDefault"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_btn_college"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/icon_college"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/college_icon_default" />
        <TextView
            android:id="@+id/tv_college"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/college"
            android:textSize="12sp"
            android:textColor="@color/colorIconDefault"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_btn_shopping_car"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/icon_shopping_car"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/shopping_car_default" />
        <TextView
            android:id="@+id/tv_shopping_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/shopping_car"
            android:textSize="12sp"
            android:textColor="@color/colorIconDefault"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_btn_my"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:clickable="true"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/icon_my"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/my_icon_default" />
        <TextView
            android:id="@+id/tv_my"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/my"
            android:textSize="12sp"
            android:textColor="@color/colorIconDefault"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>