<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorHomePageBg">

    <com.wnw.lovebaby.view.costom.HomepageSwipeRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <com.wnw.lovebaby.view.costom.HomepageScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/searchbar_height"
                    android:src="@drawable/searchbar"/>
                <RelativeLayout
                    android:id="@+id/slideView"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/viewpager_height" >

                    <android.support.v4.view.ViewPager
                        android:id="@+id/homepage_vp_image"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                    <LinearLayout
                        android:id="@+id/dotLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:gravity="center"
                        android:orientation="horizontal"
                        android:padding="8dp" >

                        <ImageView
                            android:id="@+id/v_dot1"
                            android:layout_width="@dimen/dot_width"
                            android:layout_height="@dimen/dot_height"/>
                        <ImageView
                            android:id="@+id/v_dot2"
                            android:layout_width="@dimen/dot_width"
                            android:layout_height="@dimen/dot_height"
                            android:layout_marginLeft="@dimen/dot_left_margin"/>
                    </LinearLayout>
                </RelativeLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:padding="@dimen/padding_dp10"
                    android:descendantFocusability="afterDescendants">
                    <LinearLayout
                        android:id="@+id/homepage_menu_today_new_goods"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/homepage_menu_height"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:clickable="true">
                        <ImageView
                            android:layout_width="@dimen/homepage_menu_icon_width"
                            android:layout_height="@dimen/homepage_menu_icon_height"
                            android:src="@drawable/daily_new_product"
                            android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="@dimen/homepage_menu_text_width"
                            android:layout_height="@dimen/homepage_menu_text_height"
                            android:layout_gravity="center"
                            android:text="@string/today_new_goods"
                            android:textSize="@dimen/homepage_menu_text_size"
                            android:textColor="@color/colorIconSelected"
                            android:gravity="center" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/homepage_menu_classify"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/homepage_menu_height"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:clickable="true">
                        <ImageView
                            android:layout_width="@dimen/homepage_menu_icon_width"
                            android:layout_height="@dimen/homepage_menu_icon_height"
                            android:layout_gravity="center"
                            android:src="@drawable/classify_list"/>
                        <TextView
                            android:layout_width="@dimen/homepage_menu_text_width"
                            android:layout_height="@dimen/homepage_menu_text_height"
                            android:layout_gravity="center"
                            android:text="@string/sort_of_goods"
                            android:textSize="@dimen/homepage_menu_text_size"
                            android:textColor="@color/colorIconSelected"
                            android:gravity="center" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/homepage_menu_myshop"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/homepage_menu_height"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:clickable="true">
                        <ImageView
                            android:layout_width="@dimen/homepage_menu_icon_width"
                            android:layout_height="@dimen/homepage_menu_icon_height"
                            android:layout_gravity="center"
                            android:src="@drawable/my_shop"/>
                        <TextView
                            android:layout_width="@dimen/homepage_menu_text_width"
                            android:layout_height="@dimen/homepage_menu_text_height"
                            android:layout_gravity="center"
                            android:text="@string/my_shop"
                            android:textSize="@dimen/homepage_menu_text_size"
                            android:textColor="@color/colorIconSelected"
                            android:gravity="center" />
                    </LinearLayout>
                    <LinearLayout
                        android:id="@+id/homepage_menu_invite"
                        android:layout_width="0dp"
                        android:layout_height="@dimen/homepage_menu_height"
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:clickable="true">
                        <ImageView
                            android:layout_width="@dimen/homepage_menu_icon_width"
                            android:layout_height="@dimen/homepage_menu_icon_height"
                            android:layout_gravity="center"
                            android:src="@drawable/invite_open_shop"/>
                        <TextView
                            android:layout_width="@dimen/homepage_menu_text_width"
                            android:layout_height="@dimen/homepage_menu_text_height"
                            android:layout_gravity="center"
                            android:text="@string/invite_open_shop"
                            android:textSize="@dimen/homepage_menu_text_size"
                            android:textColor="@color/colorIconSelected"
                            android:gravity="center" />
                    </LinearLayout>
                </LinearLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:background="#b1f7f6f6"
                    android:text="猜你喜欢"
                    android:gravity="center_vertical"
                    android:textSize="12sp"
                    android:paddingLeft="10dp"/>
                <com.wnw.lovebaby.view.costom.GoodsGridView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:columnWidth="@dimen/itemSize"
                    android:gravity="center"
                    android:horizontalSpacing="4dp"
                    android:verticalSpacing="4dp"
                    android:numColumns="auto_fit"
                    android:scrollbars="vertical"
                    android:scrollbarStyle="insideOverlay"
                    android:stretchMode="columnWidth">
                </com.wnw.lovebaby.view.costom.GoodsGridView>
            </LinearLayout>
        </com.wnw.lovebaby.view.costom.HomepageScrollView>
    </com.wnw.lovebaby.view.costom.HomepageSwipeRefreshLayout>
</RelativeLayout>